 * Help fixes and tweaks. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]
 * moniker(<object>) returns an objects monikered name. [MUX] [MG]
 * mapsql() only stored 10 columns, instead of the advertised 30. Reported
   by Mercutio. [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was
   rather silly. You may wish to lower yours by 1 now to compensate.
   Suggested by Mercutio. [MG]
 * Having unescaped commas in the final arg of a function call is now
   deprecated, and will eventually become illegal. Any existing code which
   does this will spam you with a warning until you change it. [MG]
 * The stack (%0-%9) can now hold up to 30 arguments, with the additional 20
   available through v(10) to v(29). $-commands, @functions and many built-in
   commands and functions (such as ufun(), @mapsql, etc) now make use of
   these args. [MG] [MUX] [Rhost]

Commands:
 * @dolist now accepts /inline and related switches, like @switch does.
   Suggested by Reaver. [MG]
 * @teleport/list teleports a list of objects to a single destination.
   Suggested by Nyssa, [MUX]. [MG]
 * @sockset and SOCKSET can now show/set PROMPT_NEWLINES. [MG]
 * @halt now takes a /noeval switch, and will always strip curly braces when
   run /noeval. [MG]
 * Added @mail/cstats, which shows the mail stats you see on connection.
   Patch by spork.
 * Added a new switch for @command/add, /rsnoparse, which stops the rightside
   arguments (after the '=') from being evaluated. Also clarified the help
   to show that /noparse only affects leftside args. Suggested by spork. [MG]
 * WHO, DOING and SESSION now take wildcard patterns for names, as well as